startup-5 fix layout spacing

--- a/_sass/sections/_contact.scss
+++ b/_sass/sections/_contact.scss
@@ -3,6 +3,27 @@
  * PACKAGES
  */
 
+.contact {
+  position: relative;
+}
+
+.contact__title-wrapper {
+  width: 100%;
+  height: 92px;
+
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  z-index: 1;
+
+  background-color: rgba($alt-brand-color, 0.8);
+
+  h2 {
+    color: $lighten;
+  }
+}
+
 textarea {
   height: 165px;
 
@@ -11,7 +32,7 @@ textarea {
 
 #map {
   width: 100%;
-  height: 300px;
+  height: 400px;
 }
 
 .range-container {
