--- a/_sass/sections/_nav.scss
+++ b/_sass/sections/_nav.scss
@@ -43,6 +43,10 @@ nav {
     font-weight: bold;
   }
 
-  .locale {
+  .locale_fr, .locale_en {
     text-transform: uppercase;
+  }
+
+  .locale_en {
+    margin-left: 30px;
   }
